# tree-sitter-rpmspec

./: .gitignore  .gitlab-ci.yml  .prettierrc.yml  Cargo.toml  Makefile  NEOVIM.md  Package.swift  README.md  binding.gyp  example-file  example.spec  grammar.js  package.json
bindings/c/: tree-sitter-rpmspec.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rpmspec/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterRpmspecTests/: TreeSitterRpmspecTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: changelog.txt  comment.txt  conditionals.txt  description.txt  file_trigger.txt  files.txt  macros.txt  preamble.spec  preamble.txt  runtime_scriptlets.txt  scriptlets.txt  subpackage.txt  trigger.txt
